<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">


    <TextView
        android:id="@+id/setUnitTitle"
        android:layout_width="272dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="558dp"
        android:layout_marginEnd="135dp"
        android:layout_marginLeft="20dp"
        android:text="@string/settings"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rgGavity"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"

        android:layout_marginBottom="525dp"
        android:layout_marginEnd="235dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="-2dp"
        android:text="@string/gravity_unit"
        android:textSize="20sp" />

    <RadioGroup

        android:id="@+id/rgGravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="460dp"

        android:layout_marginStart="200dp">

        <RadioButton
            android:id="@+id/rbSpecificGravity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specific_gravity" />

        <RadioButton
            android:id="@+id/rbBrix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brix" />

        <RadioButton
            android:id="@+id/rbPlato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato" />
    </RadioGroup>

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="390dp"
        android:layout_marginEnd="172dp"
        android:layout_marginLeft="12dp"

        android:layout_marginStart="-3dp"
        android:text="@string/temperture_unit"
        android:textSize="20sp" />

    <RadioGroup

        android:id="@+id/rgtemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="330dp"

        android:layout_marginStart="200dp">

    <RadioButton
        android:id="@+id/rbCelcius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/celsius" />

    <RadioButton
        android:id="@+id/rbFahrenheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit" />
    </RadioGroup>

    <TextView
        android:layout_width="294dp"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="149dp"
        android:layout_marginEnd="117dp"
        android:layout_marginStart="0dp"
        android:text="@string/data_request_interval"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="211dp"
        android:layout_marginEnd="241dp"
        android:layout_marginStart="15dp"
        android:text="@string/dyp_id"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/IPServer2"
        android:layout_width="169dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="272dp"
        android:layout_marginEnd="230dp"
        android:layout_marginStart="12dp"
        android:text="@string/server_ip"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/txtinterval"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="145dp"
        android:layout_marginEnd="6dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/in_min"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtId"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="204dp"
        android:layout_marginEnd="-3dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_1_digit_id"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/Dypaddress"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="269dp"
        android:layout_marginEnd="-1dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pi_ip_address"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cancelSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="67dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/saveSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="212dp"
        android:background="#03A9F4"
        android:text="@string/save" />


</RelativeLayout>