<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="552dp"
        android:layout_marginEnd="111dp"
        android:layout_marginStart="48dp"
        android:text="@string/new_brewing_profile"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
       />

    <TextView
        android:id="@+id/beernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="488dp"
        android:layout_marginEnd="224dp"
        android:layout_marginStart="16dp"

        android:text="@string/beer_name"
        android:textSize="20sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/sgtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="384dp"
        android:layout_marginEnd="240dp"
        android:layout_marginStart="0dp"

        android:text="@string/set_specific_gravity"
        android:textSize="20sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/beerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="474dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="209dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:visibility="visible"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/SGeditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="383dp"
        android:layout_marginEnd="57dp"
        android:layout_marginStart="192dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_0_0"
        android:inputType="textPersonName"
        android:visibility="visible" tools:targetApi="o" />

    <TextView
        android:id="@+id/sgunittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"

        android:layout_marginBottom="400dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="364dp"

        android:text="@string/brix"
        android:textSize="20sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="233dp"
        android:layout_marginEnd="233dp"
        android:shadowColor="@color/design_default_color_primary_dark"
        android:text="@string/save" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="233dp"
        android:layout_marginEnd="64dp"
        android:text="@string/cancel" />




</RelativeLayout>