<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <TextView
        android:id="@+id/gravityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="492dp"
        android:layout_marginEnd="177dp"
        android:layout_marginStart="7dp"
        android:text="@string/gravity"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/gravityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="496dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="233dp"
        android:text="@string/defaultgravity"

        android:textSize="20sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/gravityUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="499dp"
        android:layout_marginEnd="-6dp"
        android:layout_marginStart="306dp"
        android:text="@string/brix"

        android:textSize="20sp" />

    <TextView
        android:id="@+id/tempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="382dp"
        android:layout_marginEnd="209dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="11dp"
        android:text="@string/temperature"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ABVLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="323dp"
        android:layout_marginEnd="298dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="11dp"
        android:text="ABV:"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ABVValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="324dp"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="200dp"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="380dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="233dp"
        android:text="@string/_0_0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tempUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="380dp"
        android:layout_marginEnd="-6dp"
        android:layout_marginStart="306dp"
        android:text= "@string/f"

        android:textSize="20sp" />

    <TextView
        android:id="@+id/updatetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="269dp"
        android:layout_marginEnd="230dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="20dp"
        android:text="@string/updated"
        android:textSize="20sp" />

    <!-- <TextView
        android:id="@+id/agotxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="300dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="240dp"
        android:text="ago"
        android:textSize="20sp" />
    -->


    <TextView
        android:id="@+id/timelast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="269dp"
        android:layout_marginEnd="120dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="120dp"
        android:text="@string/x"
        android:textSize="20sp" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="260dp"
        android:text="@string/refresh"
        android:textSize="15sp" />
    <Button
        android:id="@+id/startBrew"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="220dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="20dp"
        android:text="@string/start_brewing"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="565dp"
        android:layout_marginEnd="44dp"
        android:text="@string/note_select_beer_in_the_top_right_corner"
        android:textColor="@color/colorPrimaryDark" />


</RelativeLayout>